--- a/src/public/css/goods.css
+++ b/src/public/css/goods.css
@@ -22,4 +22,26 @@
     border: none;
     background-color: #FFF;
 }
-.goods__item
+.goods__item{
+    width: 100%;
+    margin: 10px;
+    display: inline-block;
+}
+.goods__form{
+}
+.item__page{
+    display: inline-block;
+    width: 300px;
+    padding: 100px;
+}
+.item__img{
+    display: block;
+    width: 100%;
+    height: 80%;
+    padding: 0;
+}
+.item__name-input{
+    padding: 5px auto;
+    border: none;
+    font-size: 20px;
+}
