--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -26,10 +26,14 @@
 }
 .mypage__inner{
     width: 100%;
-    border-bottom: solid 3px gainsboro;
+    
 }
-.mypage__form
+.mypage__form{
+    width: 100%;
+}
 .mypage__inner-button{
+    width: 100%;
+    border-bottom: solid 3px gainsboro;
     margin-left: 20%;
 }
 .mypage-listing__button,
@@ -41,3 +45,24 @@
     color: gainsboro;
     background-color: #FFF;
 }
+.mypage__item{
+    width: 100%;
+    margin: 10px;
+}
+.item__page{
+    display: inline-block;
+    width: 300px;
+    padding: 100px;
+}
+.item__img{
+    display: block;
+    width: 100%;
+    height: 80%;
+    padding: 0;
+}
+.item__input{
+    padding: 5px auto;
+    border: none;
+    font-size: 20px;
+}
+
