--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,3 +1,12 @@
+
+/* スマホ向けスタイル */
+@media (max-width: 768px) {
+    body {
+        font-size: 14px;
+        background-color: lightgreen;
+    }
+}
+
 .header{
     width: 100%;
     margin: 0 auto;
